# rust-1

./: .gitignore  Cargo.toml  GIT_SETUP.md  INSTALL.md  QUICKSTART.md  README.md  run.bat  run.ps1
.github/: copilot-instructions.md
.github/workflows/: build.yml
src/: main.rs
