[package]
name = "word-diff-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = "0.27"
winit = "0.29"
docx-rs = "0.5"
similar = "2.3"
rfd = "0.14"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
xml-rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_xml_rs = "0.5"

[[bin]]
name = "word-diff-viewer"
path = "src/main.rs"
